# cspeak

./: .gitignore  package.json  pnpm-lock.yaml  screenshot-settings.mjs  vite.config.ts
.github/scripts/: bump-version.cjs
.github/workflows/: build.yml
cloudflare-worker/: package.json  test-stats.mjs  wrangler.toml
cloudflare-worker/.wrangler/cache/: cf.json
cloudflare-worker/.wrangler/state/v3/cache/miniflare-CacheObject/: metadata.sqlite-shm  metadata.sqlite-wal
cloudflare-worker/.wrangler/state/v3/kv/miniflare-KVNamespaceObject/: metadata.sqlite-shm  metadata.sqlite-wal
cloudflare-worker/patches/: demoparser2+0.15.0.patch
cloudflare-worker/public/: index.html
cloudflare-worker/src/: demo.js  demoparser-polyfill.js  rating3_model.js  stats.js  worker.js
docs/: official-client-reverse-engineering.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  connection.rs  demo.rs  identity.rs  lib.rs  main.rs  market.rs  state.rs
src/components/: AgentHistorySidebar.tsx  AgentToolBadge.tsx  CsAgentPanel.tsx  DemoPanel.tsx  EmojiPicker.tsx  MarkdownContent.tsx  MarketPanel.tsx  SettingsPanel.tsx  WelcomePage.tsx
src/components/ui/: announcement.tsx  button.tsx  cta11-demo.tsx  dock-two.tsx  input.tsx  shadcnblocks-com-cta11.tsx  tiles-demo.tsx  tiles.tsx
src/hooks/: use-theme.ts
src/lib/: agent-executor.ts  agent-tools.ts  agent-types.ts  agent.ts  conversation-store.ts  demo.ts  ipc.ts  market.ts  sfx.ts  storage.ts
