[package]
name = "csspeak"
version = "0.1.0"
description = "csspeak — a custom TeamSpeak 3 voice client"
authors = ["you"]
edition = "2021"

[lib]
name = "csspeak_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "csspeak"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tsclientlib = { path = "../vendor/tsclientlib/tsclientlib", default-features = false, features = ["default-tls", "audio"] }
tsproto-packets = { path = "../vendor/tsclientlib/utils/tsproto-packets" }
audiopus = "0.3.0-rc.0"
cpal = "0.15"
tokio = { version = "1", features = ["rt", "sync", "time", "macros", "io-util", "fs"] }
futures = "0.3"
reqwest = { version = "0.13", default-features = false, features = ["json", "default-tls", "stream"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
tauri-plugin-dialog = "2.7.1"

# WebRTC AEC + DeepFilterNet denoise only build on macOS (meson/ninja + tract).
# On Windows/Linux CI these are excluded so `tauri build` succeeds on all
# platforms — the app runs without echo cancellation on those targets.
[target.'cfg(target_os = "macos")'.dependencies]
webrtc-audio-processing = { version = "2.1.0", features = ["bundled"] }
deep_filter = { path = "../vendor/deepfilter", default-features = false, features = ["tract", "default-model"] }
ndarray = "0.15"

